<!-- activity_problem_detail.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ProblemDetailActivity">

    <TextView
            android:id="@+id/problem_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_text"
            android:layout_margin="16dp" />

    <EditText
            android:id="@+id/answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/problem_hint"
            android:layout_below="@id/problem_text_view"
            android:layout_margin="16dp" />

    <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/answer_edit_text"
            android:layout_margin="16dp" />
</RelativeLayout>